[tool.poetry]
name = "Adv"
version = "0.1.0"
description = "TD d'Advance ML"
authors = ["Guillaume Peltier <guillaume.peltier.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numba = "^0.54.1"
DateTime = "^4.3"
matplotlib = "^3.5.1"
sklearn = "^0.0"
pandas = "^1.3.5"
tqdm = "^4.62.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.2.5"
jupytext = "^1.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
